# ROB

./: Cargo.toml  README.md
src/: agent.rs  agents.rs  config.rs  context.rs  llm.rs  main.rs  state.rs  tools.rs  tui.rs
test/: test1.md  test2.md
test/logs/smart_home_eval_20260529_014852/: test1.jsonl
test/logs/smart_home_eval_20260529_014852/state/sessions/: 06d73af9-94d2-4d61-801c-ed39a8e82693.json  074ed41a-e851-4a61-b4c2-fa080638afdb.json  0b9cad22-3932-4dde-888e-a859c0db558c.json  0bd9ac36-bfd3-432c-8bd6-ee33252a147c.json  0d6a5a47-1f16-42e0-a4e0-f3396afdd242.json  0dc297ed-4326-4ce5-8989-989e89659089.json  106345c9-bdf8-4924-959c-e8c929b634ca.json  13bd181c-b646-4204-b241-60bb59cc9588.json  1996bcc9-6c95-4b6f-9b0f-01e10403e9aa.json  20be070a-6584-464a-ab43-6e460a17169c.json  279e7b65-89b1-4829-9a10-181dbd7bfb83.json  28546832-47db-42c3-903d-278f5a68f732.json  2e4b20e6-2c12-4eb0-838b-0487ffe4f83a.json  33352d7d-5bb4-4174-afda-27e47e9190d4.json  3374cf1a-1536-4736-9eff-5915bea89378.json  33aead9c-4337-43f1-945c-fbb872f1970e.json  39269b7f-bb77-4fae-8fe9-8cd4b17aea77.json  39b7086b-d359-4765-9b5f-e80b0c0e96e3.json  3d256522-c2ae-435a-9a85-1aa814ebfaf4.json  4d685d66-75da-4e7e-8ef5-4d05da89415b.json  659a1f2b-199d-4f86-b0c8-40a1be84b0e0.json  68e501e6-1848-4cd4-ae2f-42cc10f801c7.json  (+28 more)
test/logs/smart_home_eval_20260529_015327/: summary.json  summary.md  test1.jsonl  test2.jsonl
test/logs/smart_home_eval_20260529_115222/: summary.json  summary.md  test1.jsonl  test2.jsonl
test/logs/smoke_state/sessions/: 81693e41-3c45-40f6-9cf9-606ac5b6f083.json
(+968 files in other folders)
