[package]
name = "rob"
version = "0.1.0"
edition = "2021"
description = "Rust Linux CLI migration of the OpenOmniBot agent framework"
license = "Apache-2.0"

[dependencies]
anyhow = "=1.0.82"
clap = { version = "=4.4.18", features = ["derive", "env"] }
crossterm = "=0.27.0"
dirs = "=5.0.1"
futures-util = "=0.3.32"
ratatui = "=0.26.3"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = "=12.0.0"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
tokio = { version = "=1.37.0", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "=0.8.12"
uuid = { version = "=1.8.0", features = ["v4"] }
home = "=0.5.9"
url = "=2.5.0"
unicode-segmentation = "=1.11.0"
indexmap = "=2.2.6"
